# lynki

./: .gitignore  .gitmodules  AGENTS.md  COMMANDES_PIEREZ.md  DOCUMENTATION_SITE_WEB_DOREVIA_VAULT.md  README.md  setup_test_db.sh  setup_test_db_docker.sh  tmp_vault_send.py
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  evolution.md
.github/workflows/: adr001-linky-conformity.yml
ZeDocs/: ANALYSE_INVESTISSEUR_DOREVIA_DVIG_LINKY.md  ANALYSE_SPEC_PHASE_6_OPS_HARDENING.md  CHECKLIST_OPERATIONNELLE_CORE_DOREVIA_SH.md  CLARIFICATION_TENANT_UNIVERS_SOURCE.md  DESCRIPTION_DETAILLEE_PROJET_DOREVIA_PLATEFORM.md  ETAT_IMPLEMENTATION_CORE_DOREVIA_SH.md  GUIDE_UTILISATEUR_DOREVIA_SH.md  IMPACT_CLARIFICATION_CONTRACTUELLE.md  ONBOARDING_CONSULTANT_FONCTIONNEL_DOREVIA.md  PATCH_VAULT_PERSISTENCE_APPLIQUE.md  PRECONISATIONS_IMPLEMENTATION_SPEC_V1.1.md  PRECONISATIONS_VERROUILLAGE_CORE.md  RUNBOOK_BACKFILL_CONFIRMATION.md  SPEC_Dorevia_Reference_v2.0.md  SPEC_IMPLEMENTATION_ACTUELLE_V1.0.md  SPEC_dorevia_sh_v1.0.md  npo.md
ZeDocs/Projet_LGZ/: NOTE_CADRAGE_PROJET_ODOO.md  NOTE_CADRAGE_PROJET_ODOO_LGZ_RGL_CCC_V2.docx  NOTE_CADRAGE_PROJET_ODOO_LGZ_RGL_CCC_V2_2.docx  NOTE_CADRAGE_PROJET_ODOO_LGZ_RGL_CCC_V2_2.md
ZeDocs/TestV0/: ANALYSE_SPEC_PHASE_6_OPS_HARDENING.md  APPLICATION_PRECONISATIONS_VERROUILLAGE.md  CHECKLIST_OPERATIONNELLE_CORE_DOREVIA_SH.md  DESCRIPTION_DETAILLEE_PROJET_DOREVIA_PLATEFORM.md  GUIDE_MIGRATION_LAB.md  PATCH_SPEC_DOREVIA_SH_v1.0.1_GATEWAY_GLOBALE.md  PLAN_IMPLEMENTATION_UNIFIE_SPEC_CORE_DOREVIA_SH.md  PRECONISATIONS_IMPLEMENTATION_SPEC_V1.1.md  QUICKSTART_DOREVIA_SH.md  RAPPORT_ANALYSE_SPEC_CORE_TENANT.md  RESUME_FONCTIONNEMENT_PLATEFORME.md  SPEC_IMPLEMENTATION_ACTUELLE_V1.0.md
ZeDocs/TestV1/: ANALYSE_EXPERT_DOREVIA_POSTED_LOCK.md  ANALYSE_IMPACT_PHASE1_FONDATIONS.md  ANALYSE_IMPACT_V2.md  AUDIT_CODE_VS_DOCUMENTATION.md  BREAKING_CHANGE_HOSTNAMES_DVIG_VAULT.md  CHECKLIST_GONOGO_PROD_CLIENT.md  DIAGNOSTIC_PDF_TOTAUX_TASSES.md  DIVERGENCES_MINEURES.md  ETAT_IMPLEMENTATION_DOREVIA_POSTED_LOCK_SCRUM.md  ETAT_IMPLEMENTATION_PHASE3_SCRUM.md  ETAT_IMPLEMENTATION_SPEC1_SCRUM.md  ETAT_IMPLEMENTATION_SPEC2_SCRUM.md  ETAT_IMPLEMENTATION_SPEC3_SCRUM.md  GUIDE_PHASE1.md  GUIDE_PHASE2.md  INTEGRATION_ODOO_FACTURATION_MRR.md  MIGRATION_DNS_P0.1.md  MIGRATION_DNS_P0.1_COMMANDES.md  MIGRATION_DNS_P0.1_RESUME.md  PLAN_EXPERT_DOREVIA_POSTED_LOCK_SCRUM.md  PLAN_IMPLEMENTATION_PHASE1_SCRUM.md  PLAN_IMPLEMENTATION_SPEC1_VAULTING_ACCOUNT_MOVE_SCRUM.md  PLAN_IMPLEMENTATION_SPEC2_CONSTAT_MENSUEL_SCRUM.md  PLAN_IMPLEMENTATION_SPEC3_ODOO_CORE_SCRUM.md  RAPPORT_DOREVIA_SALE_REPORTS_v1.0.md  RECOMMANDATIONS_DOREVIA_PDF_STYLING_v1.0.md  RECOMMANDATION_SECURITE_EXPIRATION_TOKENS_DVIG.md  REFLECTION_FACTURATION_MRR_VAULT.md  REFLECTION_FACTURATION_MRR_VAULT_V2.1.md  REGLES_FONDATRICES_DOREVIA_v1.0.md  REVUE_CODE_PHASE2.md  REX_INCIDENT_PDF_ODOO_CSS_BOOTSTRAP_v1.0.md  RUNBOOK_DOMAINES_CLIENTS.md  SPEC1_VAULTING_ACCOUNT_MOVE_POSTED_v1.0.md  SPEC2_VAULT_CONSTAT_MENSUEL_v1.0.md  SPEC3_ODOO_CORE_RECEPTION_CONSTATS_FACTURATION_v1.0.md  SPEC_Auto_Renew_Tokens_DVIG_Caddy_like_v1.0.md  SPEC_Dorevia_Phase2_Intention_Execution_v1.0.md  SPEC_Dorevia_Report_PDF_Layout_Fix_v1.0.md  SPEC_Dorevia_Sale_Proforma_PDF_Layout_Fix_v1.1.md  (+4 more)
ZeDocs/TestV2/: ADR-0009_Stinger_Isolation_Strategy.md  ALTERNATIVE_1_ARCHITECTURE_ACTUELLE_v1.0.md  ALTERNATIVE_2_ISOLATION_PARTIELLE_v1.0.md  ANALYSE_IMPACT_DVIG_VAULT_PAR_ENV_v1.0.md  COMPARAISON_ALTERNATIVES_DVIG_VAULT_v1.0.md  CRON_VAULTING_FACTURES.md  DECISIONS_DOUBLE_STACK_v2.1.0.md  DNS_A_CREER_core-stinger.md  DNS_ODOO_STINGER_A_CREER.md  ETAT_PLATEFORME_20260111.md  EVALUATION_SPEC_VAULTING_AUTOMATIQUE_v1.0.md  EXPLICATION_MODULES_DOREVIA.md  GUIDE_ACTIVATION_AUTH_VAULT_STINGER.md  GUIDE_CONFIGURATION_ODOO_STINGER.md  GUIDE_INSTALLATION_MODULE_VAULT_CONNECTOR.md  GUIDE_MODULES_DOREVIA_STINGER.md  PLAN_SUPPRESSION_CORE.md  (+19 more)
docs/: GUIDE_CREATION_TENANT.md
lib/: README.md  validate.sh
patches/: README.md  dms-odoo19-compat-wip.patch
schemas/: README.md  card_context.schema.json  intent.README.md  intent.schema.json  manifest.schema.json
scripts/: GUIDE_TESTS_MANUELS_ADJUSTMENTS.md  README_RUN_VAULT_TESTS.md  activate_vault_auth_stinger.sh  apply-oca-dms-odoo19-patch.sh  audit_vaultage_flow.sh  backfill_reconciliation_after_fix.py  backfill_vault_company_id.md  backfill_vault_total_ht.sql  backup_suitecrm_db.sh  build_deploy_vault_laplatine_o19.sh  check_adjustments_gonogo.sh  check_config_duree_vault_30s.sh  check_core_stinger_health.sh  check_dvig_forward_duration.sh  check_https_n8n.sh  check_odoo_phase0_dlp.sh  check_queue_job_runner.sh  check_vault_config.sh  check_vault_event_duration.sh  check_vault_invoice_data.sh  check_vault_proof_2727.sh  create_test_invoice.py  create_test_invoice_stinger.py  delete_invoice.py  deploy-linky-lab.sh  deploy_spec_v1_1_1.sh  deploy_vault_linky_payments_v1_1.sh  diagnostic_bsl_impacted.py  diagnostic_diva_analyse_expiree.sh  diagnostic_diva_async.sh  diagnostic_diva_insight.sh  diagnostic_diva_pipeline.sh  diagnostic_linky_dashboard.md  diagnostic_pending_proof_1961.sh  diagnostic_pos_sessions.sh  diagnostic_vault_plus_de_120s.sh  force_vault_invoice.sh  install_odoo_modules_dlp.sh  list_payments_out_events.sh  load_test_diva_mistral.sh  (+43 more)
servers/: README.md  server.example.json
sources/oca/account-invoicing/setup/_metapackage/: pyproject.toml
sources/oca/account-reconcile/setup/_metapackage/: pyproject.toml
sources/oca/edi/setup/_metapackage/: pyproject.toml
sources/oca/partner-contact/partner_contact_birthplace/: pyproject.toml
sources/oca/partner-contact/setup/_metapackage/: pyproject.toml
sources/oca/product-attribute/setup/_metapackage/: pyproject.toml
tests/: scenario_a_lab_core.sh  scenario_a_phase2_prompt_lab.sh  scenario_b_phase2_production.sh  scenario_b_stinger_core.sh  scenario_c_phase3_domaine_client_saas.sh  scenario_d_phase3_serveur_client.sh  scenario_e_phase3_alias_multi_domaines.sh  scenario_f_phase3_backup_restore.sh  setup_test_db.sh  sprint1_test.sh
(+2971 files in other folders)
