[project]
name = "odoo-addons-oca-account-invoicing"
version = "18.0.20251106.1"
dependencies = [
    "odoo-addon-account_global_discount==18.0.*",
    "odoo-addon-account_invoice_auto_send_by_email==18.0.*",
    "odoo-addon-account_invoice_date_due==18.0.*",
    "odoo-addon-account_invoice_fiscal_position_update==18.0.*",
    "odoo-addon-account_invoice_fixed_discount==18.0.*",
    "odoo-addon-account_invoice_pricelist==18.0.*",
    "odoo-addon-account_invoice_pricelist_sale==18.0.*",
    "odoo-addon-account_invoice_refund_link==18.0.*",
    "odoo-addon-account_invoice_refund_reason==18.0.*",
    "odoo-addon-account_invoice_section_sale_order==18.0.*",
    "odoo-addon-account_invoice_show_currency_rate==18.0.*",
    "odoo-addon-account_invoice_supplier_ref_unique==18.0.*",
    "odoo-addon-account_invoice_supplierinfo_update==18.0.*",
    "odoo-addon-account_invoice_tax_required==18.0.*",
    "odoo-addon-account_invoice_transmit_method==18.0.*",
    "odoo-addon-account_invoice_transmit_method_substitution_rule==18.0.*",
    "odoo-addon-account_invoice_tree_currency==18.0.*",
    "odoo-addon-account_invoice_triple_discount==18.0.*",
    "odoo-addon-account_invoice_warn_message==18.0.*",
    "odoo-addon-account_mail_autosubscribe==18.0.*",
    "odoo-addon-account_manual_currency==18.0.*",
    "odoo-addon-account_move_auto_post_ref==18.0.*",
    "odoo-addon-account_move_cancel_confirm==18.0.*",
    "odoo-addon-account_move_tier_validation==18.0.*",
    "odoo-addon-account_move_tier_validation_approver==18.0.*",
    "odoo-addon-account_receipt_journal==18.0.*",
    "odoo-addon-account_tax_group_widget_base_amount==18.0.*",
    "odoo-addon-account_tax_legal_notes_translate==18.0.*",
    "odoo-addon-partner_invoicing_mode==18.0.*",
    "odoo-addon-partner_invoicing_mode_at_shipping==18.0.*",
    "odoo-addon-partner_invoicing_mode_monthly==18.0.*",
    "odoo-addon-portal_account_personal_data_only==18.0.*",
    "odoo-addon-product_customerinfo_invoice==18.0.*",
    "odoo-addon-product_form_account_move_line_link==18.0.*",
    "odoo-addon-purchase_stock_picking_return_invoicing==18.0.*",
    "odoo-addon-sale_credit_note_reversal==18.0.*",
    "odoo-addon-sale_line_refund_to_invoice_qty==18.0.*",
    "odoo-addon-sale_order_invoicing_grouping_criteria==18.0.*",
    "odoo-addon-sale_order_invoicing_qty_percentage==18.0.*",
    "odoo-addon-sale_stock_picking_invoicing==18.0.*",
    "odoo-addon-stock_account_move_reset_to_draft==18.0.*",
    "odoo-addon-stock_picking_invoicing==18.0.*",
    "odoo-addon-stock_picking_return_refund_option==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
