[project]
name = "odoo-addons-oca-edi"
version = "18.0.20250819.0"
dependencies = [
    "odoo-addon-account_einvoice_generate==18.0.*",
    "odoo-addon-account_invoice_export==18.0.*",
    "odoo-addon-account_invoice_export_job==18.0.*",
    "odoo-addon-account_invoice_export_server_env==18.0.*",
    "odoo-addon-account_invoice_facturx==18.0.*",
    "odoo-addon-base_business_document_import==18.0.*",
    "odoo-addon-base_ebill_payment_contract==18.0.*",
    "odoo-addon-base_edi==18.0.*",
    "odoo-addon-base_facturx==18.0.*",
    "odoo-addon-base_ubl==18.0.*",
    "odoo-addon-base_ubl_generate==18.0.*",
    "odoo-addon-base_ubl_parse==18.0.*",
    "odoo-addon-partner_identification_import==18.0.*",
    "odoo-addon-sale_order_customer_free_ref==18.0.*",
    "odoo-addon-sale_order_import==18.0.*",
    "odoo-addon-sale_order_import_packaging==18.0.*",
    "odoo-addon-sale_order_import_ubl==18.0.*",
    "odoo-addon-sale_order_import_ubl_customer_free_ref==18.0.*",
    "odoo-addon-sale_order_import_ubl_line_customer_ref==18.0.*",
    "odoo-addon-sale_order_import_ubl_requested_delivery==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
