[project]
name = "odoo-addons-oca-partner-contact"
version = "19.0.20260401.0"
dependencies = [
    "odoo-addon-base_country_state_translatable==19.0.*",
    "odoo-addon-base_location==19.0.*",
    "odoo-addon-base_location_geonames_import==19.0.*",
    "odoo-addon-base_partner_company_group==19.0.*",
    "odoo-addon-base_partner_sequence==19.0.*",
    "odoo-addon-crm_partner_company_group==19.0.*",
    "odoo-addon-partner_address_street3==19.0.*",
    "odoo-addon-partner_affiliate==19.0.*",
    "odoo-addon-partner_auto_archive==19.0.*",
    "odoo-addon-partner_company_default==19.0.*",
    "odoo-addon-partner_company_type==19.0.*",
    "odoo-addon-partner_contact_access_link==19.0.*",
    "odoo-addon-partner_contact_address_default==19.0.*",
    "odoo-addon-partner_contact_birthdate==19.0.*",
    "odoo-addon-partner_contact_birthplace==19.0.*",
    "odoo-addon-partner_contact_department==19.0.*",
    "odoo-addon-partner_contact_job_position==19.0.*",
    "odoo-addon-partner_contact_nationality==19.0.*",
    "odoo-addon-partner_contact_personal_information_page==19.0.*",
    "odoo-addon-partner_email_check==19.0.*",
    "odoo-addon-partner_fax==19.0.*",
    "odoo-addon-partner_firstname==19.0.*",
    "odoo-addon-partner_identification==19.0.*",
    "odoo-addon-partner_identification_gln==19.0.*",
    "odoo-addon-partner_industry_secondary==19.0.*",
    "odoo-addon-partner_iterative_archive==19.0.*",
    "odoo-addon-partner_manual_rank==19.0.*",
    "odoo-addon-partner_mobile==19.0.*",
    "odoo-addon-partner_multi_relation==19.0.*",
    "odoo-addon-partner_pricelist_search==19.0.*",
    "odoo-addon-partner_priority==19.0.*",
    "odoo-addon-partner_ref_unique==19.0.*",
    "odoo-addon-partner_shipping_policy==19.0.*",
    "odoo-addon-partner_stage==19.0.*",
    "odoo-addon-partner_supplier_ref==19.0.*",
    "odoo-addon-partner_title==19.0.*",
    "odoo-addon-partner_tz==19.0.*",
    "odoo-addon-partner_utm_source==19.0.*",
    "odoo-addon-partner_vat_unique==19.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 19.0",
]
