[project]
name = "odoo-addons-oca-product-attribute"
version = "18.0.20251029.0"
dependencies = [
    "odoo-addon-product_assortment==18.0.*",
    "odoo-addon-product_attachment_zipped_download==18.0.*",
    "odoo-addon-product_attribute_archive==18.0.*",
    "odoo-addon-product_attribute_value_avoid_auto_fill==18.0.*",
    "odoo-addon-product_attribute_value_menu==18.0.*",
    "odoo-addon-product_barcode_required==18.0.*",
    "odoo-addon-product_catalog_stock==18.0.*",
    "odoo-addon-product_category_active==18.0.*",
    "odoo-addon-product_category_code==18.0.*",
    "odoo-addon-product_category_name_translatable==18.0.*",
    "odoo-addon-product_category_product_link==18.0.*",
    "odoo-addon-product_category_tag==18.0.*",
    "odoo-addon-product_category_type==18.0.*",
    "odoo-addon-product_category_uom==18.0.*",
    "odoo-addon-product_code_unique==18.0.*",
    "odoo-addon-product_company_default==18.0.*",
    "odoo-addon-product_cost_security==18.0.*",
    "odoo-addon-product_customerinfo==18.0.*",
    "odoo-addon-product_dimension==18.0.*",
    "odoo-addon-product_drained_weight==18.0.*",
    "odoo-addon-product_get_price_helper==18.0.*",
    "odoo-addon-product_list_price_from_pricelist==18.0.*",
    "odoo-addon-product_logistics_uom==18.0.*",
    "odoo-addon-product_lot_sequence==18.0.*",
    "odoo-addon-product_main_supplierinfo==18.0.*",
    "odoo-addon-product_manufacturer==18.0.*",
    "odoo-addon-product_medical==18.0.*",
    "odoo-addon-product_multi_category==18.0.*",
    "odoo-addon-product_multi_price==18.0.*",
    "odoo-addon-product_net_weight==18.0.*",
    "odoo-addon-product_origin==18.0.*",
    "odoo-addon-product_packaging_calculator==18.0.*",
    "odoo-addon-product_packaging_calculator_packaging_level==18.0.*",
    "odoo-addon-product_packaging_dimension==18.0.*",
    "odoo-addon-product_packaging_level==18.0.*",
    "odoo-addon-product_packaging_level_salable==18.0.*",
    "odoo-addon-product_packaging_level_vendor==18.0.*",
    "odoo-addon-product_packaging_unit_price_calculator==18.0.*",
    "odoo-addon-product_pricelist_alternative==18.0.*",
    "odoo-addon-product_pricelist_by_contact==18.0.*",
    "odoo-addon-product_pricelist_direct_print==18.0.*",
    "odoo-addon-product_pricelist_direct_print_company_group==18.0.*",
    "odoo-addon-product_pricelist_direct_print_website_sale==18.0.*",
    "odoo-addon-product_pricelist_direct_print_xlsx==18.0.*",
    "odoo-addon-product_pricelist_fixed_currency_rate==18.0.*",
    "odoo-addon-product_pricelist_revision==18.0.*",
    "odoo-addon-product_pricelist_supplierinfo==18.0.*",
    "odoo-addon-product_print_category==18.0.*",
    "odoo-addon-product_product_template_link==18.0.*",
    "odoo-addon-product_route_mto==18.0.*",
    "odoo-addon-product_sale_manufactured_for==18.0.*",
    "odoo-addon-product_secondary_unit==18.0.*",
    "odoo-addon-product_sequence==18.0.*",
    "odoo-addon-product_set==18.0.*",
    "odoo-addon-product_state==18.0.*",
    "odoo-addon-product_state_sale==18.0.*",
    "odoo-addon-product_state_stock_base==18.0.*",
    "odoo-addon-product_status==18.0.*",
    "odoo-addon-product_sticker==18.0.*",
    "odoo-addon-product_stock_state==18.0.*",
    "odoo-addon-product_supplierinfo_archive==18.0.*",
    "odoo-addon-product_supplierinfo_import==18.0.*",
    "odoo-addon-product_supplierinfo_import_margin==18.0.*",
    "odoo-addon-product_supplierinfo_revision==18.0.*",
    "odoo-addon-product_supplierinfo_stock_picking_type==18.0.*",
    "odoo-addon-product_tags_code==18.0.*",
    "odoo-addon-product_total_weight_from_packaging==18.0.*",
    "odoo-addon-product_uom_updatable==18.0.*",
    "odoo-addon-product_variant_route_mto==18.0.*",
    "odoo-addon-purchase_product_template_tags==18.0.*",
    "odoo-addon-sale_product_template_tags==18.0.*",
    "odoo-addon-stock_lot_production_date==18.0.*",
    "odoo-addon-uom_alias==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
